--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
         <div class="contact-list">
           <p><strong>Phone:</strong> <a href="tel:+917411128180">+91 7411128180</a></p>
           <p><strong>Email:</strong> <a href="mailto:ganeshganeshbk5274@gmail.com">ganeshganeshbk5274@gmail.com</a></p>
-          <p><strong>Office:</strong>Currently Office is not available in upcoming days we will open</p>
+          <p><strong>Office:</strong>Currently Office is not available, in upcoming days we will open</p>
         </div>
       </div>
     </section>
